# blogapi-permissions

./: docker-compose.yml  pyproject.toml
blog_project/: settings.py
